<resources>
    <string name="app_name">Jennifer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hubby_name">Hubbys name</string>
    <string name="my_name">my_name</string>
    <string name="hubby_phone_number">Hubbys phone name</string>
    <string name="paired_devices">paired devices</string>
    <string name="connect_message">connect message</string>
    <string name="disconnect_message">disconnect message</string>
    <string name="test_message">test message</string>
    <string name="last_play_time">last play time</string>
    <string name="last_weather_time">last weather time</string>
    <string name="always_speak_out">always speak out</string>
    <string name="bluetooth_sco">voice call stream</string>
    <string name="time_slot">Time slot</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="sco_mode">SCO mode</string>
    <string name="weather_update">Weather update</string>
    <string name="weather_woeid">woeid</string>
    <string name="current_weather">current_weather</string>
    <string name="battery_charging_state">battery_charging_state</string>
    <string name="battery_level_state">battery_level_state</string>
    <string name="office_wifi">office-wifi</string>
    <string name="home_wifi">home-wifi</string>
    <string name="reminder_tone">reminder tone</string>
    <string name="repeat_last_message">repeat_last_message</string>
    <string name="repeat_sent_message">repeat_sent_message</string>
    <string name="repeat_rejected_request">repeat_rejected_request</string>
    <string name="office_loc">Office location</string>
    <string name="voice_assistant">voice_assistant</string>
    <string name="prefer_offline_recognition">prefer_offline_recognition</string>
    <string name="home_loc">Home location</string>
    <string name="week_start_reminder">week_start_reminder</string>
    <string name="week_end_reminder">week_end_reminder</string>
    <string name="car_disconnect_tone">car_disconnect_tone</string>
    <string name="office_volume">office volume</string>
    <string name="office_commute_eta">office_commute_eta_enabled</string>
    <string name="notification_volume">notification volume</string>
    <string name="start_speech_recognition">start_speech_recognition</string>
    <string name="ui_running">ui_running</string>
    <string name="default_speech_rate">default_speech_rate</string>
    <string name="news_speech_rate">news_speech_rate</string>
    <string name="saved_logs">saved_logs</string>
    <string name="speech_running">speech_running</string>
    <string name="paytm_threshold">paytm_threshold</string>
    <string name="prefer_phone_speaker_during_sco">prefer_phone_speaker_during_sco</string>

    <!-- String to display in user-notification area of Main activity -->
    <string name="user_notification">user_notification</string>
    <string name="intentSummary">intentSummary</string>

    <!-- colors -->
    <string name="button_color_disconnected">#FFFFFF</string>
    <string name="button_color_connected">#00E6E6</string>
    <string name="color_dashboard_gray">#404040</string>
    <string name="color_ready_for_speech">#134D00</string>


    <string name="ringer_volume">ringer volume</string>
    <string-array name="paired_devices">
        <item>Car stereo</item>
        <item>Home speaker</item>
        <item>Laptop</item>
    </string-array>
    <string-array name="paired_devices_values">
        <item>Car stereo</item>
        <item>Home speaker</item>
        <item>Laptop</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
